--- a/templates/example.yml
+++ b/templates/example.yml
@@ -1,10 +1,14 @@
 children:
 - folder: Minimal Example
+  meta_data:
+    check_state: 2
   children:
   - module: polybox
     use_folder: true
     folder_name: Polybox
     poly_id: YrFA3IT7FhemOAs
     poly_type: s
-    allowed_extensions: []
-    forbidden_extensions: []
+    allowed_extensions: [ ]
+    forbidden_extensions: [ ]
+    meta_data:
+      check_state: 2
