--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -84,6 +84,19 @@ jobs:
         pip install -r requirements.txt -U
         pip install boto3 -U
 
+    - name: Build Pyinstaller (Windows)
+      if: startsWith(matrix.os, 'windows')
+      shell: cmd
+      run: |
+        pip uninstall pyinstaller
+        git clone https://github.com/pyinstaller/pyinstaller.git
+        cd pyinstaller
+        git checkout tags/v4.2
+        cd bootloader
+        python ./waf all
+        cd ..
+        python setup.py install
+
     - name: Install dependencies (MacOS)
       if: startsWith(matrix.os, 'macos')
       run: |
